# anki-multitool

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
anki-multitool-cli/: Cargo.toml
anki-multitool-cli/src/: cli.rs  main.rs
anki-multitool-convert/: Cargo.toml
anki-multitool-convert/src/: json.rs  markdown.rs
anki-multitool-core/: Cargo.toml
anki-multitool-core/src/: lib.rs
anki-multitool-dict/: Cargo.toml
anki-multitool-ds/: Cargo.toml
anki-multitool-ds/src/: card.rs
anki-multitool-ds/src/http/: request.rs  response.rs
anki-multitool-itests/: Cargo.toml
anki-multitool-itests/src/: lib.rs  util.rs
anki-multitool-itests/src/tests/: convert.rs
anki-multitool-request/: Cargo.toml
anki-multitool-request/src/: client.rs
anki-multitool-startup/: Cargo.toml
anki-multitool-startup/src/: cli.rs  config.rs  main.rs  printer.rs
anki-multitool-test-util/: Cargo.toml
anki-multitool-test-util/src/: env.rs  server.rs
anki-multitool-util/: Cargo.toml
anki-multitool-util/src/: commit.rs  file.rs  lib.rs
completions/: anki-mtool.fish
examples/: JSON_deck.json  Markdown_deck.md  Markdown_deck_2.md
resources/examples/: Markdown_deck.md  Markdown_deck_2.md
