[workspace]
resolver = "3"
members = [
    "anki-multitool-startup",
    "anki-multitool-core",
    "anki-multitool-convert",
    "anki-multitool-ds",
    "anki-multitool-request",
    "anki-multitool-util",
    
    "anki-multitool-test-util",
    "anki-multitool-itests",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Bohdan Sokolovskyi <sokol.chemist@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gaussfff/anki-multitool"
homepage = "https://github.com/gaussfff/anki-multitool"
description = "CLI with useful utils for interacting with Anki"
keywords = [
    "anki",
    "cli",
    "multitool",
    "utils",
    "anki-cli",
    "anki-utils",
    "anki-multitool",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "education",
]
readme = "README.md"

[workspace.dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
tokio = { version = "1.46.1", features = ["full"]}
tempfile = "3.20.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[profile.test]
opt-level = 0
debug = 2
