[package]
name = "anki-multitool-cli"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "anki-mtool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
