[package]
name = "anki-multitool-ds"
description = "contains important data structures"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
test = []

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
