[package]
name = "anki-multitool-request"
description = "contains functionality for interaction with AnkiClient API"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anki-multitool-ds = { path = "../anki-multitool-ds" }

[dev-dependencies]
anki-multitool-test-util = { path = "../anki-multitool-test-util" }
