[package]
name = "anki-multitool-util"
description = "set of useful utils to live more easily"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
